fix:correção do modo mobile aplicando gap na coluna de pesquisa.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
 @import "tailwindcss";
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+* {
+  font-family: "Comfortaa", sans-serif;
+}
 
 :root {
   --bg-color: #f3f4f6;
@@ -9,7 +20,6 @@ body{
   min-height: 100dvh;
   background-color: var(--bg-color);
   color: var(--fg-color);
-  font-size: 14px;
 }
 
 #root{
